# sd

./: README.md  config.toml  default.config.toml  pyproject.toml
sd/: __init__.py  bar_expresso.py  centro_distribuicao.py  clinica_medica.py  lavanderia.py  montagem.py
